# SJMCL_hbz

./: package-lock.json  package.json
scripts/game/: fetch_version_list.js
scripts/locale/: diff.js  gen_placeholder.js  rm.js
scripts/version/: bump.js  check.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/db/: mod_data.csv
src-tauri/assets/game/: versions.txt
src/components/: instance-basic-settings.tsx
src/components/dev/: dev-toolbar.tsx
src/components/modals/: import-modpack-modal.tsx  manage-skin-modal.tsx
src/contexts/: task.tsx
src/pages/: _app.tsx
src/pages/instances/details/[id]/settings/: index.tsx
src/pages/settings/: about.tsx  dev-test.tsx  download.tsx
src/utils/: instance.ts  logging.ts  string.ts
